# PERELET_TestTask

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py  contrib.py  matrix.py
tests/: matrix_test.py
